force-app/main/default/objects/ucinn_ascendv2__AI_Embedding_Content__c/ucinn_ascendv2__AI_Embedding_Content__c.object-meta.xml
<CustomObject>
    <label>AI Embedding Content</label>
    <nameField>
        <label>AI Embedding Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Embedding Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>