force-app/main/default/objects/ucinn_ascendv2__AI_Embedding_Content__c/fields/ucinn_ascendv2__AI_Chatbot_Subject__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__AI_Chatbot_Subject__c</fullName>
    <label>AI Chatbot Subject</label>
    <referenceTo>ucinn_ascendv2__AI_Chatbot_Subject__c</referenceTo>
    <relationshipLabel>AI Embedding Contents</relationshipLabel>
    <relationshipName>AI_Embedding_Contents_AI_Chatbot_Subject</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>