force-app/main/default/objects/ucinn_ascendv2__AI_Embedding_Content__c/fields/ucinn_ascendv2__Vector_Content__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Vector_Content__c</fullName>
    <label>Vector Content</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>