force-app/main/default/objects/ucinn_ascendv2__AI_Embedding_Content__c/fields/ucinn_ascendv2__Vector_Index__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Vector_Index__c</fullName>
    <label>Vector Index</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>