force-app/main/default/objects/ucinn_ascendv2__AI_Embedding_Content__c/fields/ucinn_ascendv2__Vector_Norm__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Vector_Norm__c</fullName>
    <label>Vector Norm</label>
    <precision>18</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>