force-app/main/default/objects/ucinn_ascendv2__AI_Embedding_Content__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__AI_Chatbot_Subject__c</columns>
    <columns>ucinn_ascendv2__Vector_Content__c</columns>
    <columns>ucinn_ascendv2__Vector_Index__c</columns>
    <columns>ucinn_ascendv2__Vector_Norm__c</columns>
    <columns>ucinn_ascendv2__Subject_Id_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>